# nasa-turbofan-rul-prediction

./: .gitignore  main.py  pyproject.toml
scripts/: run_eda.py  run_preprocessing.py
src/: config.py  logger.py
src/data/: datasets.py  load_data.py  preprocessing.py
src/features/: feature_engineering.py
src/visualization/: plots.py
