[project]
name = "nasa-turbofan-rul-prediction"
version = "0.1.0"
description = "Predicting Remaining Useful Life of NASA turbofan engines using CMAPSS dataset."
readme = "README.md"
requires-python = ">=3.11.3"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "seaborn>=0.13.2",
]

# 1. Add this to tell Python how to build your project
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# 2. Add this to tell Hatchling to include the 'src' folder
[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
